refactor(models): replace literals with constants in SchedulePlanner and DataCellParser