@@ -1,5 +1,6 @@
 package org.elias.model;
 
+import org.elias.res.constant.GeneralConstants;
 import org.elias.util.GeoFormula;
 
 import java.time.Duration;
@@ -7,30 +8,30 @@ import java.util.LinkedList;
 import java.util.List;
 import java.util.Queue;
 
-public class SchedulePlanner {
+public class SchedulePlanner
+{
 
-    private static final int MAX_TURBINES_PER_DAY = 4;
-    private static final double AVERAGE_SPEED_KMH = 150.0;
-    private static final Duration MAX_DAILY_DRIVE_TIME = Duration.ofHours(2);
-
-    public static Schedule createPlan(List<WindFarm> windFarmsToMaintain) {
-
+    public static Schedule createPlan (List<WindFarm> windFarmsToMaintain)
+    {
         List<WorkDay> workDays = new LinkedList<>();
-        int dayNumber = 1;
+        int dayNumber = GeneralConstants.INT_ONE;
 
-        for (int farmIndex = 0; farmIndex < windFarmsToMaintain.size(); farmIndex++) {
+        for (int farmIndex = 0; farmIndex < windFarmsToMaintain.size(); farmIndex++)
+        {
 
             WindFarm currentFarm = windFarmsToMaintain.get(farmIndex);
             Queue<WindTurbineType> turbines = collectTurbines(currentFarm);
 
-            // ===== Wartungstage =====
-            while (!turbines.isEmpty()) {
+            // --- Wartungstage ---
+            while (!turbines.isEmpty())
+            {
 
                 WorkDay workDay = new WorkDay(dayNumber);
                 workDay.setMaintainedWindFarm(currentFarm);
 
-                int turbinesToday = 0;
-                while (!turbines.isEmpty() && turbinesToday < MAX_TURBINES_PER_DAY) {
+                int turbinesToday = GeneralConstants.INT_ZERO;
+                while (!turbines.isEmpty() && turbinesToday < GeneralConstants.MAX_TURBINES_PER_DAY)
+                {
                     workDay.addWindTurbine(turbines.poll());
                     turbinesToday++;
                 }
@@ -39,30 +40,32 @@ public class SchedulePlanner {
                 dayNumber++;
             }
 
-            // ===== Fahrt zur nächsten Anlage =====
-            if (farmIndex < windFarmsToMaintain.size() - 1) {
+            // --- Fahrt zur naechsten Anlage ---
+            if (farmIndex < windFarmsToMaintain.size() - GeneralConstants.INT_ONE)
+            {
 
-                WindFarm nextFarm = windFarmsToMaintain.get(farmIndex + 1);
+                WindFarm nextFarm = windFarmsToMaintain.get(farmIndex + GeneralConstants.INT_ONE);
                 Duration remainingDriveTime = calculateDriveTime(currentFarm, nextFarm);
 
-                // 1️⃣ Fahrt am letzten Wartungstag (abends!)
-                WorkDay lastWorkDay = workDays.get(workDays.size() - 1);
+                // Fahrt am letzten Wartungstag
+                WorkDay lastWorkDay = workDays.getLast();
 
-                Duration driveToday = remainingDriveTime.compareTo(MAX_DAILY_DRIVE_TIME) > 0
-                        ? MAX_DAILY_DRIVE_TIME
+                Duration driveToday = remainingDriveTime.compareTo(GeneralConstants.MAX_DAILY_DRIVE_TIME) > GeneralConstants.INT_ZERO
+                        ? GeneralConstants.MAX_DAILY_DRIVE_TIME
                         : remainingDriveTime;
 
                 lastWorkDay.setDriveTime(driveToday);
                 remainingDriveTime = remainingDriveTime.minus(driveToday);
 
-                // 2️⃣ Falls nötig: weitere Fahrtage OHNE Wartung
-                while (remainingDriveTime.compareTo(Duration.ZERO) > 0) {
+                // Weitere Fahrtage ohne Wartung
+                while (remainingDriveTime.compareTo(Duration.ZERO) > GeneralConstants.INT_ZERO)
+                {
 
                     WorkDay travelDay = new WorkDay(dayNumber);
                     travelDay.setMaintainedWindFarm(currentFarm);
 
-                    Duration dailyDrive = remainingDriveTime.compareTo(MAX_DAILY_DRIVE_TIME) > 0
-                            ? MAX_DAILY_DRIVE_TIME
+                    Duration dailyDrive = remainingDriveTime.compareTo(GeneralConstants.MAX_DAILY_DRIVE_TIME) > GeneralConstants.INT_ZERO
+                            ? GeneralConstants.MAX_DAILY_DRIVE_TIME
                             : remainingDriveTime;
 
                     travelDay.setDriveTime(dailyDrive);
@@ -79,19 +82,20 @@ public class SchedulePlanner {
         return schedule;
     }
 
-    // ============================================================
-    // Hilfsmethoden
-    // ============================================================
+    // --- Hilfsmethoden ---
 
-    private static Queue<WindTurbineType> collectTurbines(WindFarm farm) {
+    private static Queue<WindTurbineType> collectTurbines (WindFarm farm)
+    {
         Queue<WindTurbineType> turbines = new LinkedList<>();
-        for (WindTurbineGroup group : farm.getWindTurbineGroups()) {
+        for (WindTurbineGroup group : farm.getWindTurbineGroups())
+        {
             turbines.addAll(group.getWindTurbines());
         }
         return turbines;
     }
 
-    private static Duration calculateDriveTime(WindFarm from, WindFarm to) {
+    private static Duration calculateDriveTime (WindFarm from, WindFarm to)
+    {
 
         double distanceKm = GeoFormula.haversineDistance(
                 from.getCoordinates().getLatitude(),
@@ -100,8 +104,8 @@ public class SchedulePlanner {
                 to.getCoordinates().getLongitude()
         );
 
-        double hours = distanceKm / AVERAGE_SPEED_KMH;
-        long minutes = Math.round(hours * 60);
+        double hours = distanceKm / GeneralConstants.AVERAGE_SPEED_KMH;
+        long minutes = Math.round(hours * GeneralConstants.MINUTES_PER_HOUR);
 
         return Duration.ofMinutes(minutes);
     }
